--- a/overlays/init-k8s/mongodb-pvc.yaml
+++ b/overlays/init-k8s/mongodb-pvc.yaml
@@ -1,12 +1,9 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc
+  name: mongodb-pvc 
 spec:
-  accessModes:
-  - ReadWriteOnce
   resources:
     requests:
-      storage: 8Gi
+      storage: 200Gi
   storageClassName: csi-cinder-sc-delete
-  volumeMode: Filesystem
