--- a/overlays/init-k8s/flyway-job.yaml
+++ b/overlays/init-k8s/flyway-job.yaml
@@ -2,3 +2,15 @@ apiVersion: batch/v1
 kind: Job
 metadata:
   name: flyway-migrate
+spec:
+  template:
+    spec:
+      containers:
+      - name: digilog-flyway
+        resources:
+          limits:
+            cpu: 0.25
+            memory: 1Gi
+          requests:
+            cpu: 0.25
+            memory: 1Gi
