--- a/base/grafana-service.yaml
+++ b/base/grafana-service.yaml
@@ -1,7 +1,7 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: grafana-service
+  name: grafana
 spec:
   selector:
     app: digilog
@@ -10,3 +10,4 @@ spec:
   ports:
     - protocol: TCP
       port: 3000
+      targetPort: 3000
