--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -2,6 +2,13 @@ apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 
 resources:
+  - web-fluent-cm.yaml
+  - gunicorn-cm.yaml
+  - loki-deployment.yaml
+  - loki-pvc.yaml
+  - loki-service.yaml
+  - grafana-deployment.yaml
+  - grafana-service.yaml
   - postgres-deployment.yaml
   - postgres-pvc.yaml
   - postgres-service.yaml
@@ -11,6 +18,6 @@ resources:
   - mongodb-service.yaml
   - web-deployment.yaml
   - web-service.yaml
-  - web-ingress.yaml
+  - ingress.yaml
   - scrapy-deployment.yaml
   - flyway-job.yaml
