loki / grafana setup and sidecar logger for web app

--- a/base/grafana-deployment.yaml
+++ b/base/grafana-deployment.yaml
@@ -25,3 +25,11 @@ spec:
         image: grafana/grafana:8.4.3
         ports:
         - containerPort: 3000
+        volumeMounts:
+          - mountPath: /var/lib/grafana
+            name: grafana-vol
+            subPath: grafana
+      volumes:
+        - name: grafana-vol
+          persistentVolumeClaim:
+            claimName: grafana-pvc
