--- a/base/kustomization.yaml
+++ b/base/kustomization.yaml
@@ -7,6 +7,7 @@ resources:
   - loki-deployment.yaml
   - loki-pvc.yaml
   - loki-service.yaml
+  - grafana-pvc.yaml
   - grafana-deployment.yaml
   - grafana-service.yaml
   - postgres-deployment.yaml
