--- a/base/loki-deployment.yaml
+++ b/base/loki-deployment.yaml
@@ -25,3 +25,11 @@ spec:
         image: grafana/loki:2.4.2
         ports:
         - containerPort: 3100
+        volumeMounts:
+          - mountPath: /loki
+            name: loki-vol
+            subPath: loki
+      volumes:
+        - name: loki-vol
+          persistentVolumeClaim:
+            claimName: loki-pvc
