--- a/base/web-fluent-cm.yaml
+++ b/base/web-fluent-cm.yaml
@@ -14,6 +14,7 @@ data:
     <match web.access-logs>
       @type loki
       url "#{ENV['LOKI_URL']}"
+      extra_labels {"component":"web-access"}
       flush_interval 10s
       flush_at_shutdown true
       buffer_chunk_limit 1m
