update ingress patch for InIT k8s cluster.

--- a/overlays/init-k8s/kustomization.yaml
+++ b/overlays/init-k8s/kustomization.yaml
@@ -15,4 +15,4 @@ patches:
   - target:
       kind: Ingress
       name: web-ingress
-    path: web-ingress-patch.json
+    path: ingress-patch.json
