add selectors for local volumes to ensure that the same volume is used for the next deployment.

--- a/overlays/local-kind/grafana-pvc.yaml
+++ b/overlays/local-kind/grafana-pvc.yaml
@@ -6,4 +6,8 @@ spec:
   resources:
     requests:
       storage: 2Gi
+  selector:
+    matchLabels:
+      type: local
+      run: grafana
   storageClassName: slow
