--- a/overlays/local-kind/mongodb-pvc.yaml
+++ b/overlays/local-kind/mongodb-pvc.yaml
@@ -6,4 +6,8 @@ spec:
   resources:
     requests:
       storage: 8Gi
+  selector:
+    matchLabels:
+      type: local
+      run: mongodb
   storageClassName: slow
