--- a/overlays/local-kind/postgres-pvc.yaml
+++ b/overlays/local-kind/postgres-pvc.yaml
@@ -1,9 +1,13 @@
 apiVersion: v1
 kind: PersistentVolumeClaim
 metadata:
-  name: postgres-pvc 
+  name: postgres-pvc
 spec:
   resources:
     requests:
       storage: 8Gi
+  selector:
+    matchLabels:
+      type: local
+      run: postgres
   storageClassName: slow
