reformat yaml files, adjust cpu limits and change to string

--- a/overlays/init-k8s/flyway-job.yaml
+++ b/overlays/init-k8s/flyway-job.yaml
@@ -6,11 +6,11 @@ spec:
   template:
     spec:
       containers:
-      - name: digilog-flyway
-        resources:
-          limits:
-            cpu: 0.25
-            memory: 1Gi
-          requests:
-            cpu: 0.25
-            memory: 1Gi
+        - name: digilog-flyway
+          resources:
+            limits:
+              cpu: 250m
+              memory: 1Gi
+            requests:
+              cpu: 250m
+              memory: 1Gi
