--- a/overlays/init-k8s/scrapy-deployment.yaml
+++ b/overlays/init-k8s/scrapy-deployment.yaml
@@ -6,11 +6,11 @@ spec:
   template:
     spec:
       containers:
-      - name: digilog-scrapy
-        resources:
-          limits:
-            cpu: 1
-            memory: 2Gi
-          requests:
-            cpu: 1
-            memory: 2Gi
+        - name: digilog-scrapy
+          resources:
+            limits:
+              cpu: 500m
+              memory: 2Gi
+            requests:
+              cpu: 500m
+              memory: 2Gi
