--- a/base/web-deployment.yaml
+++ b/base/web-deployment.yaml
@@ -22,7 +22,7 @@ spec:
     spec:
       containers:
         - name: digilog-web
-          image: trephor/digilog-web
+          image: trephor/digilog-web:0.1.1
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
