--- a/overlays/init-k8s/web-deployment.yaml
+++ b/overlays/init-k8s/web-deployment.yaml
@@ -9,8 +9,16 @@ spec:
         - name: digilog-web
           resources:
             limits:
-              cpu: 500m
-              memory: 2Gi
+              cpu: 250m
+              memory: 1Gi
             requests:
-              cpu: 500m
-              memory: 2Gi
+              cpu: 250m
+              memory: 1Gi
+        - name: web-fluentd
+          resources:
+            limits:
+              cpu: 250m
+              memory: 256Mi
+            requests:
+              cpu: 250m
+              memory: 256Mi
