--- a/base/web-fluent-cm.yaml
+++ b/base/web-fluent-cm.yaml
@@ -11,10 +11,16 @@ data:
       format apache2
       tag web.access-logs
     </source>
+    <filter web.access-logs>
+      @type record_transformer
+      <record>
+        tag ${tag}
+      </record>
+    </filter>
     <match web.access-logs>
       @type loki
       url "#{ENV['LOKI_URL']}"
-      extra_labels {"component":"web-access"}
+      extra_labels "{\"component\": \"web\", \"pod\": \"#{ENV['POD_NAME']}\"}"
       flush_interval 10s
       flush_at_shutdown true
       buffer_chunk_limit 1m
