fix ingress name in prod kustomization

--- a/overlays/init-k8s/kustomization.yaml
+++ b/overlays/init-k8s/kustomization.yaml
@@ -18,5 +18,5 @@ patchesStrategicMerge:
 patches:
   - target:
       kind: Ingress
-      name: web-ingress
+      name: ingress
     path: ingress-patch.json
