--- a/base/web-deployment.yaml
+++ b/base/web-deployment.yaml
@@ -22,7 +22,8 @@ spec:
     spec:
       containers:
         - name: digilog-web
-          image: trephor/digilog-web:0.1.1
+          image: trephor/digilog-web:0.1
+          imagePullPolicy: Always
           env:
             - name: POSTGRES_PASSWORD
               valueFrom:
