add scheduling job kustomization for PROD

--- a/overlays/init-k8s/kustomization.yaml
+++ b/overlays/init-k8s/kustomization.yaml
@@ -14,6 +14,7 @@ patchesStrategicMerge:
   - web-deployment.yaml
   - loki-deployment.yaml
   - grafana-deployment.yaml
+  - scheduler-test-job.yaml
 
 patches:
   - target:
