--- a/base/loki-sts.yaml
+++ b/base/loki-sts.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: loki
   labels:
@@ -7,6 +7,7 @@ metadata:
     tier: logging
     run: loki
 spec:
+  serviceName: loki
   replicas: 1
   selector:
     matchLabels:
