--- a/base/postgres-sts.yaml
+++ b/base/postgres-sts.yaml
@@ -1,5 +1,5 @@
 apiVersion: apps/v1
-kind: Deployment
+kind: StatefulSet
 metadata:
   name: postgres
   labels:
@@ -7,6 +7,7 @@ metadata:
     tier: storage
     run: postgres
 spec:
+  serviceName: postgres
   replicas: 1
   selector:
     matchLabels:
