--- a/overlays/init-k8s/grafana-pvc.yaml
+++ b/overlays/init-k8s/grafana-pvc.yaml
@@ -6,4 +6,4 @@ spec:
   resources:
     requests:
       storage: 2Gi
-  storageClassName: csi-cinder-sc-delete
+  storageClassName: csi-cinder-sc-retain
