--- a/overlays/init-k8s/mongodb-pvc.yaml
+++ b/overlays/init-k8s/mongodb-pvc.yaml
@@ -6,4 +6,4 @@ spec:
   resources:
     requests:
       storage: 200Gi
-  storageClassName: csi-cinder-sc-delete
+  storageClassName: csi-cinder-sc-retain
