--- a/base/scheduler-test-job.yaml
+++ b/base/scheduler-test-job.yaml
@@ -10,46 +10,50 @@ spec:
       name: scheduler-test
     spec:
       containers:
-        - name: digilog-scheduler
-          image: trephor/digilog-scheduler:0.1
-          imagePullPolicy: Always
-          command: ["/usr/venv/bin/python"]
-          args: ["/usr/src/scheduler.py", "calibrate", "municipality", "-84"]
-          env:
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
-                  optional: false
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: user
-                  optional: false
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-cm
-                  key: databaseName
-                  optional: false
-            - name: MONGODB_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: password
-                  optional: false
-            - name: MONGODB_USER
-              valueFrom:
-                secretKeyRef:
-                  name: mongodb-secret
-                  key: user
-                  optional: false
-            - name: SCHEDULER_LOGGING_TARGET
-              value: 'LOKI'
-            - name: POD_NAME
-              valueFrom:
-                fieldRef:
-                  fieldPath: metadata.name
+      - args:
+        - /usr/src/scheduler.py
+        - calibrate
+        - municipality
+        - '-84'
+        command:
+        - /usr/venv/bin/python
+        env:
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: password
+              name: postgres-secret
+              optional: false
+        - name: POSTGRES_USER
+          valueFrom:
+            secretKeyRef:
+              key: user
+              name: postgres-secret
+              optional: false
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              key: databaseName
+              name: postgres-cm
+              optional: false
+        - name: MONGODB_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: password
+              name: mongodb-secret
+              optional: false
+        - name: MONGODB_USER
+          valueFrom:
+            secretKeyRef:
+              key: user
+              name: mongodb-secret
+              optional: false
+        - name: SCHEDULER_LOGGING_TARGET
+          value: LOKI
+        - name: POD_NAME
+          valueFrom:
+            fieldRef:
+              fieldPath: metadata.name
+        image: trephor/digilog-scheduler:0.1.7
+        name: digilog-scheduler
       restartPolicy: OnFailure
