--- a/base/flyway-job.yaml
+++ b/base/flyway-job.yaml
@@ -10,26 +10,25 @@ spec:
       name: flyway-migrate
     spec:
       containers:
-        - name: digilog-flyway
-          image: trephor/digilog-flyway:0.1
-          imagePullPolicy: Always
-          env:
-            - name: POSTGRES_PASSWORD
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: password
-                  optional: false
-            - name: POSTGRES_USER
-              valueFrom:
-                secretKeyRef:
-                  name: postgres-secret
-                  key: user
-                  optional: false
-            - name: POSTGRES_DB
-              valueFrom:
-                configMapKeyRef:
-                  name: postgres-cm
-                  key: databaseName
-                  optional: false
+      - env:
+        - name: POSTGRES_PASSWORD
+          valueFrom:
+            secretKeyRef:
+              key: password
+              name: postgres-secret
+              optional: false
+        - name: POSTGRES_USER
+          valueFrom:
+            secretKeyRef:
+              key: user
+              name: postgres-secret
+              optional: false
+        - name: POSTGRES_DB
+          valueFrom:
+            configMapKeyRef:
+              key: databaseName
+              name: postgres-cm
+              optional: false
+        image: trephor/digilog-flyway:0.1.7
+        name: digilog-flyway
       restartPolicy: OnFailure
