add CronJob init-k8s overlay files

--- a/overlays/init-k8s/kustomization.yaml
+++ b/overlays/init-k8s/kustomization.yaml
@@ -15,6 +15,10 @@ patchesStrategicMerge:
   - loki-sts.yaml
   - grafana-sts.yaml
   - scheduler-test-job.yaml
+  - cj-url-checker.yaml
+  - cj-calibration-scheduler.yaml
+  - cj-calibration-analyser.yaml
+  - cj-crawl-scheduler.yaml
 
 patches:
   - target:
